# vibeready

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/website/: README.md
apps/windows-client/: CMakeLists.txt  README.txt  THIRD-PARTY-NOTICES.txt
apps/windows-client/src/: main.cpp  telemetry.h  ui_foundation.cpp
apps/windows-client/tests/: telemetry_contract.cpp
config/: development-services.json
docs/: design-review-2026-06-27.md  development-services.md  i18n-copy.json  mvp-page-flow.md  mvp-scope.md  qa-matrix-m5.md  state-error-telemetry-dictionary.md  terminology.md
scripts/: Test-DevelopmentTelemetry.ps1  Test-M5-ClientTelemetryTransport.ps1  Test-M5-TelemetryQueries.ps1  Validate-CHI15.ps1  Validate-CHI66.ps1  Validate-M3.ps1  Validate-M4.ps1  Validate-M5-ClientTelemetry.ps1  Validate-M5-Release.ps1  Validate-M5-TelemetryPrivacy.ps1  Validate-M5-Worker.ps1  Validate-RepositoryLayout.ps1  build-release.ps1  query-telemetry-funnel.ps1  run-qa-matrix.ps1  test-package.ps1  test-smoke.ps1  test.ps1  validate-rules.ps1
services/telemetry-worker/: tsconfig.json  wrangler.jsonc
services/telemetry-worker/migrations/: 0001_events.sql
services/telemetry-worker/test/: worker-contract.test.mjs
specs/: telemetry-redaction-cases.json  telemetry-schema.json  vibeready-rules.json
src/windows/: VibeReady.rc.in  main.cpp  telemetry.cpp  ui_foundation.h  version.h.in
telemetry-worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
telemetry-worker/src/: index.ts
telemetry-worker/test/: worker-contract.test.mjs
telemetry/samples/: rejected-events.json  valid-events.json
telemetry/sql/: errors_by_version.sql  funnel_core.sql  ready_conversion.sql
tests/windows/: telemetry_contract.cpp
